--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Gearman Monitor
 Copyright (C) 2011 Yevgeny Yegorov
 All rights reserved.
 
-Gearman Monitor is a tool to watch Gearman servers. Gearman
-server version and registered workers status is now available.
-Several Gearman servers can be monitored at the same time. 
-Server and worker name filters can be applied.
+Gearman Monitor is a tool to watch [Gearman](http://gearman.org/) servers. Gearman
+server version, function queue and registered workers status is available. Several
+Gearman servers can be monitored at the same time. Server and function name filters
+can be applied.
